로그아웃 하지 않은 토큰인지 체크하는 함수 추가
