# routes/authRoute.js
@@ -5,6 +5,6 @@ const authController = require("../applications/auth/authController");
 
 router.post("/register", authController.register);
 router.post("/login", authController.login);
-router.get("/logout", authController.logout);
+router.post("/logout", authController.logout);
 
 module.exports = router;
